k8s-demo/prometheus/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    name: prometheus
    app: prometheus
